--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8">
     <title>Group Coursework 1</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style type="text/tailwindcss">
+        @layer components {
+            .responsive-container {
+                @apply px-6 mx-auto max-w-full lg:px-12 py-4;
+            }
+        }
+    </style>
 </head>
 <body>
     <div id="app">
-        <h1 class="text-xl text-red-500">{{ message }}</h1>
+        <header>
+            <nav class="bg-white border-gray-200 dark:bg-gray-800 responsive-container">
+                <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
+                    <a href="https://flowbite.com" class="flex items-center">
+                        <img src="https://ik.imagekit.io/fmxqscuev/icons8-lessons-64_pdvEMVgCW.png?ik-sdk-version=javascript-1.4.3&updatedAt=1666292631783" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />
+                        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Vue Lessons</span>
+                    </a>
+                </div>
+            </nav>
+        </header>
+
+        <main>
+            <div class="responsive-container grid grid-cols-4">
+                <div class="p-4 space-y-2 border-2 border-black rounded-xl">
+                    <p><strong>Subject: </strong> Maths</p>
+                    <p><strong>Location: </strong> London</p>
+                    <p><strong>Price: </strong> Maths</p>
+                    <p><strong>Spaces: </strong> 5</p>
+
+                    <div class="flex justify-end">
+                        <button class="!mt-2 text-sm bg-green-500 p-1.5 rounded text-white transition duration-200 focus:ring-2 focus:ring-offset-2 focus:ring-green-500">Add to cart</button>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.13/dist/vue.js"></script>
-    <script>
+    <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
+    <script type="text/javascript">>
         const app = new Vue({
             el: "#app",
             data: {
