--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
             }
         }
     </style>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#1ABC9C',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 <body>
     <div id="app">
@@ -34,14 +45,14 @@
                     <p><strong>Spaces: </strong> 5</p>
 
                     <div class="flex justify-end">
-                        <button class="!mt-2 text-sm bg-green-500 p-1.5 rounded text-white transition duration-200 focus:ring-2 focus:ring-offset-2 focus:ring-green-500">Add to cart</button>
+                        <button class="!mt-2 text-sm bg-primary p-1.5 rounded text-white transition duration-200 focus:ring-2 focus:ring-offset-2 focus:ring-primary">Add to cart</button>
                     </div>
                 </div>
             </div>
         </main>
     </div>
     <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
-    <script type="text/javascript">>
+    <script type="text/javascript">
         const app = new Vue({
             el: "#app",
             data: {
