--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <main>
             <div class="responsive-container grid grid-cols-4">
                 <div class="p-4 space-y-2 border-2 border-black rounded-xl">
-                    <p><strong>Subject: </strong> Maths</p>
-                    <p><strong>Location: </strong> London</p>
-                    <p><strong>Price: </strong> Maths</p>
-                    <p><strong>Spaces: </strong> 5</p>
+                    <p><strong>Subject:</strong> {{ lesson.subject }}</p>
+                    <p><strong>Location:</strong> {{ lesson.location }}</p>
+                    <p><strong>Price:</strong> £ {{ lesson.price }}</p>
+                    <p><strong>Spaces:</strong> {{ lesson.spaces }}</p>
 
                     <div class="flex justify-end">
                         <button class="!mt-2 text-sm bg-primary p-1.5 rounded text-white transition duration-200 focus:ring-2 focus:ring-offset-2 focus:ring-primary">Add to cart</button>
@@ -56,7 +56,13 @@
         const app = new Vue({
             el: "#app",
             data: {
-                message: 'Hello World'
+                lesson: {
+                    id: 1,
+                    subject: 'Maths',
+                    location: 'London',
+                    price: 100,
+                    spaces: 5,
+                }
             }
         })
     </script>
