--- a/index.html
+++ b/index.html
@@ -1,70 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Group Coursework 1</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
-        @layer components {
-            .responsive-container {
-                @apply px-6 mx-auto max-w-full lg:px-12 py-4;
-            }
+      @layer components {
+        .responsive-container {
+          @apply px-6 mx-auto max-w-full lg:px-12 py-4;
         }
+      }
     </style>
     <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#1ABC9C',
-                    }
-                }
-            }
-        }
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: "#1ABC9C",
+            },
+          },
+        },
+      };
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        <header>
-            <nav class="bg-white border-gray-200 dark:bg-gray-800 responsive-container">
-                <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-                    <a href="https://flowbite.com" class="flex items-center">
-                        <img src="https://ik.imagekit.io/fmxqscuev/icons8-lessons-64_pdvEMVgCW.png?ik-sdk-version=javascript-1.4.3&updatedAt=1666292631783" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />
-                        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Vue Lessons</span>
-                    </a>
-                </div>
-            </nav>
-        </header>
+      <header>
+        <nav
+          class="bg-white border-gray-200 dark:bg-gray-800 responsive-container"
+        >
+          <div
+            class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl"
+          >
+            <a href="https://flowbite.com" class="flex items-center">
+              <img
+                src="https://ik.imagekit.io/fmxqscuev/icons8-lessons-64_pdvEMVgCW.png?ik-sdk-version=javascript-1.4.3&updatedAt=1666292631783"
+                class="mr-3 h-6 sm:h-9"
+                alt="Flowbite Logo"
+              />
+              <span
+                class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
+                >Vue Lessons</span
+              >
+            </a>
+          </div>
+        </nav>
+      </header>
 
-        <main>
-            <div class="responsive-container grid grid-cols-4">
-                <div class="p-4 space-y-2 border-2 border-black rounded-xl">
-                    <p><strong>Subject:</strong> {{ lesson.subject }}</p>
-                    <p><strong>Location:</strong> {{ lesson.location }}</p>
-                    <p><strong>Price:</strong> £ {{ lesson.price }}</p>
-                    <p><strong>Spaces:</strong> {{ lesson.spaces }}</p>
+      <main>
+        <pre>{{ cart }}</pre>
+        <div class="responsive-container grid grid-cols-4">
+          <div
+            class="p-4 space-y-2 border-2 border-black rounded-xl"
+            v-for="(lesson, index) in lessons"
+            :key="index"
+          >
+            <p><strong>Subject:</strong> {{ lesson.subject }}</p>
+            <p><strong>Location:</strong> {{ lesson.location }}</p>
+            <p><strong>Price:</strong> £{{ lesson.price }}</p>
+            <p><strong>Spaces:</strong> {{ lesson.spaces }}</p>
 
-                    <div class="flex justify-end">
-                        <button class="!mt-2 text-sm bg-primary p-1.5 rounded text-white transition duration-200 focus:ring-2 focus:ring-offset-2 focus:ring-primary">Add to cart</button>
-                    </div>
-                </div>
+            <div class="flex justify-end">
+              <button
+                class="!mt-2 text-sm bg-primary p-1.5 rounded text-white transition duration-200 focus:ring-2 focus:ring-offset-2 focus:ring-primary disabled:opacity-50"
+                :disabled="lesson.spaces <= 0"
+                v-on:click.prevent="addToCart(lesson.id)"
+              >
+                Add to cart
+              </button>
             </div>
-        </main>
+          </div>
+        </div>
+      </main>
     </div>
     <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
     <script type="text/javascript">
-        const app = new Vue({
-            el: "#app",
-            data: {
-                lesson: {
-                    id: 1,
-                    subject: 'Maths',
-                    location: 'London',
-                    price: 100,
-                    spaces: 5,
+      const app = new Vue({
+        el: "#app",
+        data: {
+          lessons: [
+            {
+              id: 1,
+              subject: "Maths",
+              location: "London",
+              price: 100,
+              spaces: 5,
+            },
+          ],
+          cart: [],
+        },
+        methods: {
+          isItemInCart(id) {
+            return this.cart.some((item) => {
+              if (item.id === 1) {
+                return true;
+              }
+
+              return false;
+            });
+          },
+          addToCart(id) {
+            const lesson = this.lessons.find((lesson) => lesson.id === id);
+
+            if (this.isItemInCart() && lesson.spaces > 0) {
+              const cartItem = this.cart.find((lesson) => lesson.id === id);
+
+              this.cart = this.cart.map((item) => {
+                if (item.id === cartItem.id) {
+                  return { ...item, spaces: ++cartItem.spaces };
                 }
+              });
+            } else {
+              this.cart.push({
+                ...lesson,
+                spaces: 1,
+              });
             }
-        })
+
+            this.decreaseLessonSpaces(lesson.id);
+          },
+          decreaseLessonSpaces(id) {
+            this.lessons = this.lessons.map((item) => {
+              if (item.id === id) {
+                if (item.spaces > 0) return { ...item, spaces: --item.spaces };
+              }
+            });
+          },
+        },
+      });
     </script>
-</body>
+  </body>
 </html>
