--- a/index.html
+++ b/index.html
@@ -43,12 +43,32 @@
                 >Vue Lessons</span
               >
             </a>
+
+            <a href="" class="relative">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="#ffffff"
+                class="w-6 h-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                />
+              </svg>
+              <span
+                class="absolute -top-2 -right-2 w-4 h-4 flex justify-center items-center bg-primary text-white text-xs rounded-full"
+                >{{ cartLength }}</span
+              >
+            </a>
           </div>
         </nav>
       </header>
 
       <main>
-        <pre>{{ cart }}</pre>
         <div class="responsive-container grid grid-cols-4">
           <div
             class="p-4 space-y-2 border-2 border-black rounded-xl"
@@ -125,6 +145,13 @@
                 if (item.spaces > 0) return { ...item, spaces: --item.spaces };
               }
             });
+          },
+        },
+        computed: {
+          cartLength() {
+            if (this.cart.length > 0)
+              return this.cart.reduce((total, item) => total + item.spaces, 0);
+            return 0;
           },
         },
       });
