update readme docs

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
               />
               <span
                 class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
-                >Vue Lessons</span
+                >Coursework</span
               >
             </a>
 
-            <a href="" class="relative">
+            <a href="javascript:void(0)" class="relative">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -101,7 +101,7 @@
           lessons: [
             {
               id: 1,
-              subject: "Maths",
+              subject: "Mathematics",
               location: "London",
               price: 100,
               spaces: 5,
