--- a/index.html
+++ b/index.html
@@ -70,11 +70,7 @@
 
       <main>
         <div class="responsive-container grid grid-cols-4">
-          <div
-            class="p-4 space-y-2 border-2 border-black rounded-xl"
-            v-for="(lesson, index) in lessons"
-            :key="index"
-          >
+          <div class="p-4 space-y-2 border-2 border-black rounded-xl">
             <p><strong>Subject:</strong> {{ lesson.subject }}</p>
             <p><strong>Location:</strong> {{ lesson.location }}</p>
             <p><strong>Price:</strong> £{{ lesson.price }}</p>
@@ -84,7 +80,7 @@
               <button
                 class="!mt-2 text-sm bg-primary p-1.5 rounded text-white transition duration-200 focus:ring-2 focus:ring-offset-2 focus:ring-primary disabled:opacity-50"
                 :disabled="lesson.spaces <= 0"
-                v-on:click.prevent="addToCart(lesson.id)"
+                v-on:click.prevent="addLessonToCart()"
               >
                 Add to cart
               </button>
@@ -95,56 +91,53 @@
     </div>
     <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
     <script type="text/javascript">
-      const app = new Vue({
+      new Vue({
         el: "#app",
         data: {
-          lessons: [
-            {
-              id: 1,
-              subject: "Mathematics",
-              location: "London",
-              price: 100,
-              spaces: 5,
-            },
-          ],
+          lesson: {
+            id: 1,
+            subject: "Mathematics",
+            location: "London",
+            price: 100,
+            spaces: 5,
+          },
           cart: [],
         },
         methods: {
           isItemInCart(id) {
             return this.cart.some((item) => {
-              if (item.id === 1) {
+              if (item.id === id) {
                 return true;
               }
 
               return false;
             });
           },
-          addToCart(id) {
-            const lesson = this.lessons.find((lesson) => lesson.id === id);
-
-            if (this.isItemInCart() && lesson.spaces > 0) {
-              const cartItem = this.cart.find((lesson) => lesson.id === id);
-
-              this.cart = this.cart.map((item) => {
-                if (item.id === cartItem.id) {
-                  return { ...item, spaces: ++cartItem.spaces };
-                }
-              });
-            } else {
+          addLessonToCart() {
+            if (!this.isItemInCart(this.lesson.id)) {
               this.cart.push({
-                ...lesson,
+                ...this.lesson,
                 spaces: 1,
               });
+            } else {
+              if (this.lesson.spaces > 0) {
+                const cartItem = this.cart.find(
+                  (lesson) => lesson.id === this.lesson.id
+                );
+
+                this.cart = this.cart.map((item) => {
+                  if (item.id === cartItem.id) {
+                    return { ...item, spaces: ++cartItem.spaces };
+                  }
+                });
+              }
             }
 
-            this.decreaseLessonSpaces(lesson.id);
+            this.decreaseLessonSpaces();
           },
-          decreaseLessonSpaces(id) {
-            this.lessons = this.lessons.map((item) => {
-              if (item.id === id) {
-                if (item.spaces > 0) return { ...item, spaces: --item.spaces };
-              }
-            });
+          decreaseLessonSpaces() {
+            if (this.lesson.spaces > 0)
+              this.lesson = { ...this.lesson, spaces: --this.lesson.spaces };
           },
         },
         computed: {
