--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </header>
 
       <main>
-        <div class="responsive-container grid grid-cols-4">
+        <div class="responsive-container grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
           <div class="p-4 space-y-2 border-2 border-black rounded-xl">
             <p><strong>Subject:</strong> {{ lesson.subject }}</p>
             <p><strong>Location:</strong> {{ lesson.location }}</p>
