--- a/index.html
+++ b/index.html
@@ -69,22 +69,11 @@
       </header>
 
       <main>
-        <div class="responsive-container grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-          <div class="p-4 space-y-2 border-2 border-black rounded-xl">
-            <p><strong>Subject:</strong> {{ lesson.subject }}</p>
+        <div class="responsive-container grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+          <div class="p-4 space-y-2 border-2 border-black rounded-xl" v-for="(lesson, index) in lessons" :key="index">
+            <p><strong>Subject:</strong> {{ lesson.topic }}</p>
             <p><strong>Location:</strong> {{ lesson.location }}</p>
             <p><strong>Price:</strong> £{{ lesson.price }}</p>
-            <p><strong>Spaces:</strong> {{ lesson.spaces }}</p>
-
-            <div class="flex justify-end">
-              <button
-                class="!mt-2 text-sm bg-primary p-1.5 rounded text-white transition duration-200 focus:ring-2 focus:ring-offset-2 focus:ring-primary disabled:opacity-50"
-                :disabled="lesson.spaces <= 0"
-                v-on:click.prevent="addLessonToCart()"
-              >
-                Add to cart
-              </button>
-            </div>
           </div>
         </div>
       </main>
@@ -94,14 +83,14 @@
       new Vue({
         el: "#app",
         data: {
-          lesson: {
-            id: 1,
-            subject: "Mathematics",
-            location: "London",
-            price: 100,
-            spaces: 5,
-          },
+          lessons: [],
           cart: [],
+        },
+        created() {
+          fetch("http://localhost:3000/lessons")
+            .then(res => res.json())
+            .then(data => this.lessons = data)
+            .catch(err => console.log(err))  
         },
         methods: {
           isItemInCart(id) {
